# BioShock-Infinite-Steam-VR

./: .gitignore  README.md  bun.lockb  package.json  postprocessLua.ts  tsconfig.json
asset_tools/: uefind.sh
asset_tools/animations/: exanim.bat  flipnscale.js
bsi_anim/: .gitignore  Cargo.toml
bsi_anim/src/: main.rs  math.rs  read.rs
bsi_tools_lib/: Cargo.toml
bsi_tools_lib/src/: format.rs  lib.rs  math.rs
steamvr_nav_tools/: .gitignore  Cargo.toml
vconsole_tunnel/: .gitignore  Cargo.toml
vconsole_tunnel/src/: lib.rs  main.rs  math.rs  vconsole.rs  vtunnel.rs  vtunnel_emitter.rs
vconsole_tunnel/src/game/: commands.rs  elizabeth.rs  mod.rs  player.rs  trace.rs
vconsole_tunnel/src/game_entities/: mod.rs  player.rs
vconsole_tunnel/src/nav_builder/: nav_builder.rs
vconsole_tunnel/src/nav_parser/: bake.rs  mod.rs  nav.rs  parser.rs  read.rs
voicedb/: bun.lockb  package.json
voicedb_data/: voicedb_liz.json  voicedb_plebs.json
voicedb_src/: dupecheck.js  tag.js  transcribe.js
vscript/: bun.lockb  package.json  postprocessLua.ts  tsconfig.json
vsnd_generator/: bun.lockb  package.json
vsnd_generator_src/: liz_speech_vsnd_builder.js  towav.sh
vsnd_tools/: .gitignore  Cargo.toml
vtunnel/: .gitignore  Cargo.toml
vtunnel/src/: lib.rs  vconsole.rs  vtunnel.rs  vtunnel_emitter.rs
vtunnel/src/game/: commands.rs  elizabeth.rs  gadget.rs  mod.rs  player.rs  trace.rs
vtunnel/src/nav_builder/: mod.rs  nav_builder.rs
vtunnel/vscript/entity_scripts/: vtunnel_gadget.ts
vtunnel/vscript/vconsole_tunnel/: MessageHandlers.ts  VTunnel.ts
(+138 files in other folders)
