[package]
name = "vtunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vtunnel"
path = "src/bin/vtunnel.rs"

[dependencies]
bsi_tools_lib = { path = "../bsi_tools_lib" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
bytes = "1.6.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
rand = "0.9.0-alpha.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
